<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <import type="android.text.TextUtils" />

        <variable
            name="data"
            type="com.dariobabic.githubrepos.features.repos.presentation.search.SearchReposViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:endIconMode="clear_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={data.searchQuery}" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textSortBy"
            style="@style/TextAppearance.MaterialComponents.Body2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/sort_by"
            app:layout_constraintBottom_toBottomOf="@+id/radioGroup"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/radioGroup" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:addRadioGroupCheckListener="@{data.radioGroupChangeListener}"
            app:enableRadioGroupCheck="@{TextUtils.isEmpty(data.searchQuery)}"
            app:clearRadioGroupCheck="@{data.clearSorting}"
            app:layout_constraintEnd_toEndOf="@id/buttonClear"
            app:layout_constraintHorizontal_bias="0.2"
            app:layout_constraintStart_toEndOf="@+id/textSortBy"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radioButtonStars"
                style="@style/TextAppearance.MaterialComponents.Body2"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/stars"
                app:layout_constraintBottom_toBottomOf="@+id/filters"
                app:layout_constraintEnd_toStartOf="@+id/radioButtonForks"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/filters"
                app:layout_constraintTop_toTopOf="@id/filters" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radioButtonForks"
                style="@style/TextAppearance.MaterialComponents.Body2"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/forks"
                app:layout_constraintBottom_toBottomOf="@+id/radioButtonStars"
                app:layout_constraintEnd_toStartOf="@+id/radioButtonUpdated"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/radioButtonStars"
                app:layout_constraintTop_toTopOf="@+id/radioButtonStars" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radioButtonUpdated"
                style="@style/TextAppearance.MaterialComponents.Body2"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/updated"
                app:layout_constraintBottom_toBottomOf="@+id/radioButtonForks"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/radioButtonForks"
                app:layout_constraintTop_toTopOf="@+id/radioButtonForks" />
        </RadioGroup>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/buttonClear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{() -> data.clearSort()}"
            android:src="@drawable/ic_cancel"
            android:visibility="@{data.clearEnabled ? View.VISIBLE : View.INVISIBLE}"
            app:layout_constraintBottom_toBottomOf="@+id/radioGroup"
            app:layout_constraintStart_toEndOf="@+id/radioGroup"
            app:layout_constraintTop_toTopOf="@+id/radioGroup" />

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/progressIndicator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="@{data.loading ? View.VISIBLE : View.INVISIBLE}"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:addAdapter="@{data.adapterSearch}"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/progressIndicator"
            tools:listitem="@layout/item_search_repo" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>